# pf-biliardo

./: .gitignore  CMakeLists.txt  README.md  globals.hpp  graphics.cpp  graphics.hpp  kinematics.cpp  kinematics.hpp  kinematics.test.cpp  main.cpp  main_one.cpp  main_two.cpp  main_two_csv.cpp  mathematics.cpp  mathematics.hpp  mathematics.test.cpp  sample.hpp  statistics.cpp  statistics.hpp  statistics.test.cpp
src/: graphics.hpp  kinematics.cpp  kinematics.hpp  main.cpp  main_one.cpp  main_two.cpp  mathematics.hpp  statistics.cpp  statistics.hpp
tests/: mathematics.test.cpp
